--- a/app/static/css/forms.css
+++ b/app/static/css/forms.css
@@ -110,7 +110,7 @@ textarea {
     padding:0px;
     margin:0px;
     color: #204a65;
-    font-family:"Panton-Italic";
+    font-family:"Panton-Bold";
 }
 .contact-form-field:first-child {
     margin-right:50px;
