--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -3,7 +3,7 @@
 <div class="contact_page">
 <div class="contact-form">
   <h3>Напишите нам</h3>
-  <p>Мы стараемся улучшать наш сервис, простоту и доступность его использования. Напишите нам, о том, что бы вы хотели поменять или улучшить.<br>Эти предложения внимательно рассматриваются и обдумаваются. <br>Спасибо</p>
+  <p>Мы стараемся улучшать наш сервис, простоту и доступность его использования. Напишите нам о том, что бы вы хотели поменять или улучшить.<br>Эти предложения внимательно рассматриваются и обдумаваются. <br>Спасибо</p>
   <form action="{{ url_for('contact') }}" method="POST" name="multipart/form-data">
     <div class="contact-form-field">
       <p>Имя:</p>
@@ -37,10 +37,10 @@
         <dt>Электронная почта</dt>
           <dd>culture_city@gmail.com</dd>
         <dt>Телефон</dt>
-          <dd>888888888
+          <dd>88888888
           </dd>
         <dt>Адрес</dt>
-          <dd>linena stree 9</dd>
+          <dd>Улица Ленина 10000</dd>
         <dt>Skype</dt>
           <dd>culture-city</dd>
     </dl>
@@ -48,11 +48,11 @@
     
     <dl>
         <dt>Банк</dt>
-        <dd>346456578678759879789789</dd>
+        <dd>Счет№123456</dd>
         <dt>Яндекс-Кошелек</dt>
-        <dd>645654765765</dd>
+        <dd>Кошелек№123456</dd>
         <dt>Qiwi</dt>
-        <dd>89091007836</dt>
+        <dd>888888888</dt>
     </dl>
 </div>
 </div>
