--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -7,9 +7,10 @@
     <ul>
         <li>Содержание статьи не должно оскорблять чувства и достоинство другого человека</li>
         <li>Содержание статьи должно представлять интеллектуальную ценность</li>
+        <li>В статье <span class="incut">не должно быть </span>рекламного контента</li>
         <li>После отправки статьи автор предоставляет право на размещение материалов по усмотрению сотрудников проекта</li>
         <li>Графически оформленная статья является более приоритетной к размещению нежелии статья в текстовом формате</li>
-        <li>Форматы принимаемых файлов - <span class="file-formats">indp, psd, txt, doc, docs, jpeg, jpg, pptx</span></li>
+        <li>Форматы принимаемых файлов - <span class="incut">indp, psd, txt, doc, docs, jpeg, jpg, pptx</span></li>
         <li>Размер отправляемых файлов должен быть не более 15 мб</li>
     </ul>
     <h1>Как статья попадает в печать</h1> 
