--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
    
   
   <div class="top">
-    <h4>"Культура объединяет все стороны человеческой личности"</h4>
+    <span class="citation">"Культура объединяет все стороны человеческой личности"</span>
     <p>Дмитрий Cергеевич Лихачев</p>
      {% if current_user.is_authenticated %}
      <div class="enter"> 
@@ -49,7 +49,7 @@
   </div>
   <div class="header">
     <div class="logo"> 
-      <img src="static/images/logo.png" width="250" height="60" alt="logo">
+      <a href="index.html"><img src="static/images/logo.png" width="250" height="60" alt="logo"></a>
     </div>
       <div class="menu">
         <ul id="navigation">
