--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
    <div class="main-description">
      <h2>Культурный город - </h2>
      <h4>&emsp;- город, который делают люди</h4>
-     <p>Напишите свою статью, отправьте ее в "Культурный город" и ее прочитает Санкт-Петербург</p>
+     <p>Напишите свою статью, отправьте ее в "Культурный город" и мы разместим ее у наших Рекламных Партнеров</p>
      <a href="create.html" class="btn red">Написать</a>
      <p class="sidetext">Ознакомиться с правилами написания статей можно в разделе <span>"Создать"</span></p>
    </div>
@@ -27,22 +27,22 @@
   </div>
     <div class="block">
       <div class="feature">
-        <img src="/static/images/write.svg" alt="write"></img>
+        <a href="create.html"><img src="/static/images/write.svg" alt="write"></img></a>
         <h3><a href="create.html">Написать статью</a></h3>
         <p>Напишите статью, отправьте ее в "Культурный город" и ее увидит Санкт-Петербург</p>
       </div>
       <div class="feature">
-        <img src="/static/images/about.svg" alt="about"></img>
+        <a href="about.html"><img src="/static/images/about.svg" alt="about"></img></a>
         <h3><a href="about.html">О проекте</a></h3>
         <p>Как функционирует проект, основы его составляющей деятельности</p>
       </div>
       <div class="feature">
-        <img src="/static/images/read.svg" alt="read"></img>
+        <a href="read.html"><img src="/static/images/read.svg" alt="read"></img></a>
         <h3><a href="read.html">Читать</a></h3>
         <p>Прочитайте статьи, которые написали соотечественники. Это интересно</p>
       </div>
       <div class="feature">
-        <img src="/static/images/contact.svg" alt="contacts"></img>
+        <a href="contacts.html"><img src="/static/images/contact.svg" alt="contacts"></img></a>
         <h3><a href="contacts.html">Наши контакты</a></h3>
         <p>У вас есть вопросы? <br>Пишите нам и мы с радостью Вам ответим</p>
       </div>
