--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,12 +2,9 @@
 
 {% block content %}
 <div class="about">
-  <div class="about-text">
-    <h2>Проект "Культурный город" - <span>Проект, направленный на улучшение культурного уровня жизни, культурного окружения</span></h2>
-    <h2><span>Достигается это путем размещения познавательных статей, написанных гражданами, на свободных рекламных стендах города</span></h2>
-  </div>
   
    <div class="general-graphic-block">
+    <div class="about-description"><p><q><span>Проект "Культурный город"</span> - Проект, направленный на улучшение культурного уровня жизни, культурного окружения. Достигается это путем размещения познавательных статей, написанных гражданами, на свободных рекламных стендах города</q></p></div>
     <h1>Как работает проект</h1>
       <div class="graphic-block">
         <div class="lamp"></div>
@@ -28,28 +25,12 @@
         <div class="check"></div>
         <h3>Мы проверим статью на содержание<h3>
       </div>
-
+     
       <div class="additional-block">
         <div class="bilbord"></div>
-        <h3>И разместим у наших рекламных партнеров</h3>
+        <h3>И разместим у наших Рекламных Партнеров</h3>
+
       </div>
-      <hr>
   </div>
  
-  <div class="service">
-  <h2>Философия проекта</h2>
-    <ul>
-        <li><span>"Культурный город"</span> делают люди</li>
-        <li><span>"Культурный город"</span> за развитие</li>
-        <li><span>"Культурный город"</span> объединяет людей</li>
-        <li><span>"Культурный город"</span> - Культурный город</li>
-        <li><span>"Культурный город"</span> демократичен</li>
-        <li><span>"Культурный город"</span> многогранен</li>
-        <li><span>"Культурный город"</span> на острие прогресса</li>
-        <li><span>"Культурный город"</span> практичен</li>
-        <li><span>"Культурный город"</span> открыт новому опыту</li>
-        <br>
-    </ul>
-  </div>
-</div>
 {% endblock %}
