--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
    <div class="main-description">
      <h2>Культурный город - </h2>
      <h4>&emsp;- город, который делают люди</h4>
-     <p>Напишите свою статью, отправьте ее в "Культурный город" и мы разместим ее у наших Рекламных Партнеров</p>
+     <p>Напишите свою статью, отправьте ее в "Культурный город" и мы разместим ее в городе, у наших Рекламных Партнеров</p>
      <a href="create.html" class="btn red">Написать</a>
      <p class="sidetext">Ознакомиться с правилами написания статей можно в разделе <span>"Создать"</span></p>
    </div>
