correct error page

--- a/app/templates/50x.html
+++ b/app/templates/50x.html
@@ -40,8 +40,8 @@
       </div>
     </div>
     <div class="error">
-    <h2>This page is in design</h2>
     <p>There is internal server error. <br>Please write us on email <span>culture-city@gmail.com</span></p>
+    <h2>Error page is in design</h2>
     </div>    
     <div class="footer">
       <p class="footer-text">Copyright &copy; 2016, проект "Культурный город"</p>
