--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="error">
-<h2>this page is in design</h2>
 <p>{{error}}<br>Please write us on email <span>culture-city@gmail.com</span></p>
+<h2>Error page is in design</h2>
 
 {% endblock %}
