add city in index page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
    <div class="main-description">
      <h2>Культурный город - </h2>
      <h4>&emsp;- город, который делают люди</h4>
-     <p>Напишите свою статью, отправьте ее в "Культурный город" и мы разместим ее в городе, у наших Рекламных Партнеров</p>
+     <p>Напишите свою статью, отправьте ее в "Культурный город" и мы разместим ее в Санкт-Петербурге, у наших Рекламных Партнеров</p> 
      <a href="create.html" class="btn red">Написать</a>
      <p class="sidetext">Ознакомиться с правилами написания статей можно в разделе <span>"Создать"</span></p>
    </div>
@@ -48,7 +48,7 @@
       </div>
     </div>
   <div class="general-graphic-block">
-    <h1>Наши партнеры</h1>
+    <h1>Наши рекламные партнеры</h1>
       <div class="graphic-block">
         <img src="/static/images/handshake_icon.png" width="100" height="100" alt=""></img>
       </div>
