--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -143,6 +143,7 @@ p {
     letter-spacing: 1px;
     float:left;
     font-style:italic;
+    font-family:"Panton-Regular";
 }
 
 .top p {
@@ -260,6 +261,7 @@ p {
 .main-description p.sidetext{
     font-size: 11px;
     line-height: 16px;
+    margin-top:0px;
 }
 
 .main-description p.sidetext span{
@@ -268,7 +270,6 @@ p {
 
 .main-description .btn {
     margin-left: 110px;
-    margin-top:15px;
 }
 
 
