--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -28,7 +28,7 @@
      
       <div class="additional-block">
         <div class="bilbord"></div>
-        <h3>И разместим у наших Рекламных Партнеров</h3>
+        <h3>И отправим наших Рекламных Партнеров</h3>
 
       </div>
   </div>
