--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -35,10 +35,9 @@
 <div class="contacts">
     <dl>
         <dt>Электронная почта</dt>
-          <dd>culture_city@gmail.com</dd>
+          <dd>CultureCityToday@gmail.com</dd>
         <dt>Телефон</dt>
-          <dd>88888888
-          </dd>
+          <dd>88888888</dd>
         <dt>Адрес</dt>
           <dd>Улица Ленина 10000</dd>
         <dt>Skype</dt>
